# source-analytics

./: CLAUDE.md  PROJECT_STATUS.md  README.md  pyproject.toml
R/: aperiodic_analysis.R  connectivity_analysis.R  electrode_analysis.R  electrode_comparison_analysis.R  mvpa_analysis.R  network_analysis.R  pac_analysis.R  plot_psd.R  psd_analysis.R  report.R  roi_connectivity_analysis.R  spatial_lmm_analysis.R  specparam_vertex_analysis.R  stats_utils.R  tfce_analysis.R  vertex_connectivity_analysis.R  wholebrain_analysis.R
configs/: forge_fxs.yaml
src/source_analytics/: __init__.py  cli.py  config.py  core.py
src/source_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/source_analytics/analyses/: __init__.py  aperiodic_analysis.py  base.py  connectivity_analysis.py  electrode_analysis.py  electrode_comparison_analysis.py  mvpa_analysis.py  network_analysis.py  pac_analysis.py  psd_analysis.py  roi_connectivity_analysis.py  spatial_lmm_analysis.py  specparam_vertex_analysis.py  tfce_analysis.py  vertex_connectivity_analysis.py  wholebrain_analysis.py
src/source_analytics/atlas/: __init__.py  atlas_utils.py
src/source_analytics/io/: __init__.py  discovery.py  electrode_loader.py  loader.py
src/source_analytics/spectral/: __init__.py  aperiodic.py  band_power.py  connectivity.py  epoch_sampler.py  pac.py  psd.py  vertex.py  vertex_aperiodic.py  vertex_connectivity.py
src/source_analytics/stats/: __init__.py  cluster_permutation.py  correction.py  effect_size.py  graph_metrics.py  mvpa.py  parametric.py  tfce.py
src/source_analytics/viz/: __init__.py  glass_brain.py  psd_plots.py  report.py  style.py
tests/: conftest.py  test_config.py  test_io.py  test_psd_analysis.py  test_spectral.py  test_stats.py
