[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "source-analytics"
version = "0.2.0"
description = "Statistical analysis toolkit for source-localized EEG data (Python + R)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mne = ["mne>=1.5"]
specparam = ["specparam>=2.0"]
dev = ["pytest>=7.0", "black", "ruff"]
all = ["source-analytics[mne,specparam,dev]"]

[project.scripts]
source-analytics = "source_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
